tests/negative/list_range_continue_oob_index_assign.far
fun main() -> i64 {
  lst: List<i64> = List<i64>()
  for x in 0..<10 {
    if (x == 5) {
      continue
    }
    lst.push(x)
  }
  lst[9] = 9
  return 0
}
